<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Join Social</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="cadastro">Cadastre-se para divulgar suas redes sociais</string>
    <string name="encontrar_pessoa">Encontrar uma pessoa</string>
    <string name="encontre">Encontre quem você gosta</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="ou">OU</string>
    <string name="ja_tem_conta">Já tem uma conta?</string>
    <string name="faca_login">Faça login</string>
    <string name="email">EMAIL</string>
    <string name="digite_email">Digite aqui seu email</string>
    <string name="avancar">Avançar</string>
    <string name="nm_completo">Nome completo</string>
    <string name="nm_usuario">Nome de usuário</string>
    <string name="senha">Senha</string>
    <string name="concluir">Concluir</string>
    <string name="entrar">Entrar</string>
    <string name="progresso_cadastro">Cadastro</string>
    <string name="cadastrando">cadastrando</string>
    <string name="autenticando">autenticando</string>
    <string name="cad_sucesso">Cadastrado com sucesso!</string>
    <string name="bem_vindo">Bem-vindo!</string>
    <string name="nao_autenticou">Usuário ou senha inválidos!</string>
    <string name="cad_sem_sucesso">NÃO cadastrado!</string>
    <string name="ok">Certo!</string>
    <string name="pressed_yes">Pressionou sim</string>
    <string name="sem_internet">Sem internet!</string>
    <string name="nenhuma_rede_social">Nenhuma rede social</string>
    <string name="nenhum_usuario">Nenhum usuário encontrado</string>
    <string name="add">Adicionar rede</string>
    <string name="pessoas">Encontrar pessoas</string>
    <string name="add_rede">Adicione uma rede social</string>
    <string name="save">Salvar</string>
	<string name="pesquisar">Pesquisar</string>

    <string-array name="redes_sociais">
        <item>Ask.fm</item>
        <item>Badoo</item>
        <item>Email</item>
        <item>Facebook</item>
        <item>Flickr</item>
        <item>Foursquare</item>
        <item>Google+</item>
        <item>Instagram</item>
        <item>Last.fm</item>
        <item>Linkedin</item>
        <item>MySpace</item>
        <item>Periscope</item>
        <item>Snapchat</item>
        <item>Telefone</item>
        <item>Telegram</item>
        <item>Tumblr</item>
        <item>Twitter</item>
        <item>Waze</item>
        <item>Whatsapp</item>
        <item>Youtube</item>
    </string-array>

</resources>
